More labels and messages

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -344,8 +344,8 @@ taxonomicStatus.inferredSynonym=Inferred Synonym
 taxonomicStatus.inferredSynonym.annotation=inferred synonym
 taxonomicStatus.inferredSynonym.detail=A name that has been made a synonym of an accepted name by the resolution algorithms
 taxonomicStatus.inferredSynonym.format=<span class="inferred-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name:&nbsp;{1})</span></span>
-taxonomicStatus.inferreduplaced=Inferred Unplaced
-taxonomicStatus.inferredUplaced=Inferred Unplaced
+taxonomicStatus.inferredunplaced=Inferred Unplaced
+taxonomicStatus.inferredUnplaced=Inferred Unplaced
 taxonomicStatus.inferredUnplaced.annotation=inferred unplaced
 taxonomicStatus.inferredUnplaced.detail=A name that is treated as unplaced by the resolution algorithms
 taxonomicStatus.inferredUnplaced.format=<span class="inferred-name unplaced-name">{0}</span>
@@ -371,6 +371,11 @@ taxonomicStatus.name=Name
 taxonomicStatus.name.annotation=name
 taxonomicStatus.name.detail=A scientific name
 taxonomicStatus.name.format=<span class="taxon-name">{0}</span>
+taxonomicStatus.speciesinquirenda=Species Inquirenda
+taxonomicStatus.speciesInquirenda=Species Inquirenda
+taxonomicStatus.speciesInquirenda.annotation=species inquirenda
+taxonomicStatus.speciesInquirenda.detail=A name that has a doubtful identity
+taxonomicStatus.speciesInquirenda.format=<span class="species-inquirenda">{0}</span>
 taxonomicStatus.subjectivesynonym=Subjective Synonym
 taxonomicStatus.subjectiveSynonym=Subjective Synonym
 taxonomicStatus.subjectiveSynonym.annotation=subjective
