Manuall update of bie plugin Descr:
i18n mixed for our needs
patch EOL Images work only in LIVE system - good
made version 1.5.1 out of 1.4.20 - testing required

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,6 +1,4 @@
-site.title=Biodiversity atlas Austria
-
-index.title=Search in the Atlas 
+site.title=Atlas of Living Australia
 
 label.acceptedName=Accepted Name
 label.acceptedName.detail=The name currently used for this taxon
@@ -32,7 +30,6 @@ label.organismPart.vernacular.detail=This name is used for a specific part of th
 label.overview=Overview
 label.records=Records
 label.recordSighting=Record a sighting
-label.recordSighting.descr=Below you find optional plattforms where you can report your sightings
 label.no.records.found=No records found
 label.referencedIn=Referenced in:
 label.search=Search
@@ -67,11 +64,11 @@ facet.conservationStatus=Conservation Status
 facet.PublicationType=Publication Type
 facet.kingdom=Kingdom
 facet.idxtype=Section
-facet.australian_s=Recorded in Australia
+facet.australian_s=Recorded in Austria
 facet.categories=Category
 facet.speciesSubgroup=Species groups
-facet.isLocatedInHubCountry_b=Recorded in Australia
-facet.locatedInHubCountry=Recorded in Australia
+facet.isLocatedInHubCountry_b=Recorded in Austria
+facet.locatedInHubCountry=Recorded in Austria
 facet.hasImage=Has image
 facet.authority_s=Name authority
 facet.dataset=Checklist
@@ -85,7 +82,7 @@ facet.establishmentMeans=Establishment means
 facet.datasetName=Dataset
 facet.taxonGroup_s=Taxon group
 
-facet.conservationStatusAUS=Conservation status in Australia
+facet.conservationStatusAUS=Conservation status in Austria
 facet.conservationStatusACT=Conservation status in ACT
 facet.conservationStatusNSW=Conservation status in NSW
 facet.conservationStatusNT=Conservation status in NT
@@ -121,49 +118,74 @@ imageAvailable.false=No
 imageAvailable.yes=Yes
 imageAvailable.true=Yes
 
-rank.unknown=unknown
-rank.kingdom=Kingdom
-rank.phylum=Phylum
-rank.order=Order
-rank.family=Family
-rank.genus=Genus
-rank.species=Species
-rank.subspecies=Subspecies
-rank.variety=Variety
 rank.(rank\ not\ specified)=(Rank not specified)
-rank.subgenus=Subgenus
-rank.cultivar=Cultivar
-rank.section=Section
-rank.subfamily=Subfamily
-rank.tribe=Tribe
-rank.series=Series
-rank.superfamily=Superfamily
-rank.subtribe=Subtribe
-rank.subsection=Subsection
-rank.suborder=Suborder
-rank.subseries=Subseries
-rank.subvariety=Subvariety
-rank.subclass=Subclass
+rank.Incertae\ Sedis\ (uncertain\ rank)=Incertae Sedis (uncertain rank)
+rank.Species\ Inquirenda\ (doubtful\ identity)=Species Inquirenda (doubtful identity)
+rank.anamorph=Anamorph
+rank.biovar=Biovar
 rank.class=Class
-rank.suprageneric\ tax_\ of\ undefined\ rank=Suprageneric taxon of undefined rank
-rank.suprageneric\ tax.\ of\ undefined\ rank=Suprageneric taxon of undefined rank
-rank.supragenericname=Subfamily
+rank.cohort=Cohort
+rank.cultivar=Cultivar
+rank.division=Division
+rank.division\ zoology=Division (Zoology)
+rank.family=Family
+rank.form=Form
+rank.forma\ specialis=Forma Specialis
+rank.genus=Genus
+rank.genus\ group=Genus Group
+rank.incertae\ sedis=Incertae Sedis (uncertain rank)
+rank.informal=Informal
+rank.infraclass=Infraclass
+rank.infrafamily=Infrafamily
 rank.infraorder=Infraorder
 rank.infraspecific=Infraspecific
 rank.infraspecificname=Infraspecific Name
-rank.subspecies\ aggregate=Subspecies Aggregate
-rank.supertribe=Supertribe
-rank.phylum/division=Phylum/Division
-rank.superorder=Superorder
-rank.subphylum/subdivision=Subphylum/Subdivision
-rank.infraclass=Infraclass
+rank.kingdom=Kingdom
+rank.nothovariety=Nothovariety
 rank.null=(not specified)
+rank.order=Order
+rank.pathovar=Pathovar
+rank.phylum/division=Phylum/Division
+rank.phylum=Phylum
+rank.section=Section
+rank.section\ botany=Section (Botany)
+rank.section\ zoology=Section (Zoology)
+rank.series=Series
+rank.series\ botany=Series (Botany)
+rank.serovar=Serovar
+rank.species=Species
+rank.species\ group=Species Group
+rank.species\ inquirenda=Species Inquirenda (doubtful identity)
+rank.subclass=Subclass
+rank.subdivision\ zoology=Subdivision (Zoology)
+rank.subfamily=Subfamily
+rank.subform=Subform
+rank.subgenus=Subgenus
+rank.subinfraclass=Subinfraclass
+rank.subkingdom=Subkingdom
+rank.suborder=Suborder
+rank.subphylum/subdivision=Subphylum/Subdivision
+rank.subphylum=Subphylum
+rank.subsection=Subsection
+rank.subsection\ botany=Subsection (Botany)
+rank.subsection\ zoology=Subsection (Zoology)
+rank.subseries=Subseries
+rank.subseries\ botany=Subseries (Botany)
+rank.subspecies=Subspecies
+rank.subspecies\ aggregate=Subspecies Aggregate
+rank.subtribe=Subtribe
+rank.subvariety=Subvariety
 rank.superclass=Superclass
-rank.form=Form
-rank.Incertae\ Sedis\ (uncertain\ rank)=Incertae Sedis (uncertain rank)
-rank.Species\ Inquirenda\ (doubtful\ identity)=Species Inquirenda (doubtful identity)
-rank.cohort=Cohort
-rank.division=Division
+rank.superfamily=Superfamily
+rank.superorder=Superorder
+rank.superspecies=Superspecies
+rank.supertribe=Supertribe
+rank.suprageneric\ tax.\ of\ undefined\ rank=Suprageneric taxon of undefined rank
+rank.suprageneric\ tax_\ of\ undefined\ rank=Suprageneric taxon of undefined rank
+rank.supragenericname=Subfamily
+rank.tribe=Tribe
+rank.unranked=Unranked
+rank.variety=Variety
 
 idxtype.TAXON=Species
 idxtype.INSTITUTION=Institution
@@ -194,7 +216,7 @@ region.Tasmania=TAS
 region.IUCN=IUCN
 region.=IUCN
 
-conservationStatusAUS=Conservation status in Australia
+conservationStatusAUS=Conservation status in Austria
 conservationStatusACT=Conservation status in ACT
 conservationStatusNSW=Conservation status in NSW
 conservationStatusNT=Conservation status in NT
@@ -223,26 +245,6 @@ images.heading.specimen=Specimens
 images.heading.other=Images
 images.heading.uncertain=Misidentified
 
-overview.map.occurrence.map=Occurrence records map
-overview.map.occurrence.records=records
-overview.map.alert=Receive alerts when new records are added
-
-overview.map.datasets.title=datasets
-
-overview.datasets.descr01a=datasets have provided data to the
-overview.datasets.descr01b=dataset has provided data to the
-overview.datasets.descr01d=for this
-overview.datasets.descr02=for this
-overview.datasets.descr03=
-overview.datasets.descr04=
-
-overview.datasets.descr.survey01=Browse the list of datasets
-overview.datasets.descr.survey02=and find organisations you can join if you are interested in participating in a survey for
-
-gallery.noimages=No images available for this taxon
-gallery.noimages.descr01=If you have images for this taxon that you would like to share with
-gallery.noimages.descr02=please upload using the upload tools.
-
 overview.map.button.records.list=View records
 overview.map.button.records.simplemap=View simple map
 overview.map.button.records.map=View interactive map
@@ -254,7 +256,7 @@ overview.map.button.records.map.title=Analyse data for this taxon using advance 
 show.json=JSON
 show.rdf=RDF
 show.view.json.title=View JSON document (data interchange format)
-show.australian.species=Australian Species
+show.australian.species=Austrian Species
 
 commonStatus.common=common
 commonStatus.common.detail=A general common name for this species
@@ -295,7 +297,6 @@ identifierType.taxonConcept.detail=An identifier for a taxon definition and its 
 identifierType.vernacular=vernacular name
 identifierType.vernacular.detail=An identifier for a vernacular (common) name for a taxon
 
-taxonomicStatus.species=species
 taxonomicStatus.accepted=Accepted
 taxonomicStatus.accepted.annotation=accepted
 taxonomicStatus.accepted.detail=The status of a taxon according to the taxonomic judgement of a cited authority
@@ -343,8 +344,8 @@ taxonomicStatus.inferredSynonym=Inferred Synonym
 taxonomicStatus.inferredSynonym.annotation=inferred synonym
 taxonomicStatus.inferredSynonym.detail=A name that has been made a synonym of an accepted name by the resolution algorithms
 taxonomicStatus.inferredSynonym.format=<span class="inferred-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name:&nbsp;{1})</span></span>
-taxonomicStatus.inferreduplaced=Inferred Unplaced
-taxonomicStatus.inferredUplaced=Inferred Unplaced
+taxonomicStatus.inferredunplaced=Inferred Unplaced
+taxonomicStatus.inferredUnplaced=Inferred Unplaced
 taxonomicStatus.inferredUnplaced.annotation=inferred unplaced
 taxonomicStatus.inferredUnplaced.detail=A name that is treated as unplaced by the resolution algorithms
 taxonomicStatus.inferredUnplaced.format=<span class="inferred-name unplaced-name">{0}</span>
@@ -370,6 +371,11 @@ taxonomicStatus.name=Name
 taxonomicStatus.name.annotation=name
 taxonomicStatus.name.detail=A scientific name
 taxonomicStatus.name.format=<span class="taxon-name">{0}</span>
+taxonomicStatus.speciesinquirenda=Species Inquirenda
+taxonomicStatus.speciesInquirenda=Species Inquirenda
+taxonomicStatus.speciesInquirenda.annotation=species inquirenda
+taxonomicStatus.speciesInquirenda.detail=A name that has a doubtful identity
+taxonomicStatus.speciesInquirenda.format=<span class="species-inquirenda">{0}</span>
 taxonomicStatus.subjectivesynonym=Subjective Synonym
 taxonomicStatus.subjectiveSynonym=Subjective Synonym
 taxonomicStatus.subjectiveSynonym.annotation=subjective
@@ -395,17 +401,95 @@ page.index.title=Search | {0}
 page.species.index.heading=Search the {0} for species
 page.species.index.title=Species search | {0}
 
+# Page search specie profile
+search.title.search=Search
+search.autocomplete.placeholder=Search species, datasets, and more...
+search.title.main-btn=Search
+search.for.title=Search for <strong>{0}</strong> returned {1} results.
+search.more=More
+search.resultFine=Refine results
+search.for=Search for
+search.returned=returned
+search.results=results
+search.related=Related Searches
+search.download=Download
+search.results.page=Results per page
+search.sort.by=Sort by
+search.sort.taxon=taxon rank
+search.sort.common=common name
+search.sort.scientific=scientific name
+search.sort.match=best match
+search.sort.order=Sort order
+search.sort.order.ascending=ascending
+search.sort.order.desceding=descending
+search.sort.address=Address here
+search.details.occurrence=Occurrences:
+search.details.view.image=View images of species within this {0}
+search.all.records=all records
+search.remove.filter=remove filter
+search.download.taxa.for.your.search=Download a list of taxa for your search
+
+# Page overview
+overview.status.conservation=Conservation Status
+overview.online.resources=Online Resources
+overview.datasets=Datasets 
+overview.map.occurrence.records.01=Occurrence records map
+overview.map.occurrence.records.02=records
+overview.map.occurrence.compile.mapa.attribution=Compiled distribution map
+overview.map.occurrence.mapa.attribution.01=Compiled distribution map provided by
+overview.map.occurrence.mapa.attribution.02=data resource not known
+overview.map.submit.photo=Submit a photo
+overview.map.receive.alerts=Receive alerts when new records are added
+overview.datasets.have.provided.data=<span class="datasetLabel">datasets have</span> provided data to the {0} for this {1}.
+overview.datasets.lists.01=Browse the list of datasets
+overview.datasets.lists.02=and find organisations you can join if you are interested in participating in a survey for
+overview.datasets.species.of=species of
+overview.datasets.species.like=species like
+
+overview.map.datasets.title=datasets
+
+overview.datasets.descr01a=datasets have provided data to the
+overview.datasets.descr01b=dataset has provided data to the
+overview.datasets.descr01d=for this
+overview.datasets.descr02=for this
+overview.datasets.descr03=
+overview.datasets.descr04=
+
+overview.datasets.descr.survey01=Browse the list of datasets
+overview.datasets.descr.survey02=and find organisations you can join if you are interested in participating in a survey for
+
+# Page of gallery
+gallery.title=No images available for this taxon
+gallery.description.01=If you have images for this taxon that you would like to share with
+gallery.description.02=please upload using the upload tools.
+gallery.button.collapse=Collapse
+gallery.button.expand=Expand
+
+# Page of names
 names.title=Names and sources
-names.source=Source
+names.accepted.source=Source
 
-classification.download.childtaxa01=Download child taxa of
-classification.download.childtaxa02=
-classification.download.speciesof01=Download species of
-classification.download.speciesof02=
-classification.download.searchchildtaxa01=Search for child taxa of
-classification.download.searchchildtaxa02=
+# Page of classification
+classification.title=Classification
+classification.download.child=Download child taxa of
+classification.download.species=Download species of
+classification.search.child=Search for child taxa of
 
-classification.title02=classification
+# Page of images
+images.search.title=Image browser
+images.specie=species
+images.for=Images for
+images.of=Images of
+images.from=from
+images.species=Species images 
+images.load.more=Load more images
+images.more.information.on.this.0=More information on this {0}
+
+# Page of records
+records.list.all.records.button=View list of all occurrence records for this taxon
+records.list.all.map.button=View map of all occurrence records for this taxon
+records.title=Charts showing breakdown of occurrence records
+records=records
 
 charts.title.breakdown01=Charts showing breakdown of occurrence records (
 charts.title.breakdown02=records)
@@ -416,63 +500,46 @@ charts.button.viewlist02=records)
 charts.button.viewMap01=View map of all occurrence records for this taxon
 charts.button.viewMap02=records)
 
-literature.title.references=Name references found in
+# Page of show
+show.name.authority=Name authority
+show.source=Source
+show.rights.holder=Rights holder
+show.provided.by=Provided by
+show.main.image=Main Image
+show.main.audio=Main Audio
+show.name=Name
+show.attribution=Attribution
+show.licence=Licence
+show.main.video=Main Video
+show.ok=OK
 
-sequences.viewresults=View all results - Items 
-datapartners.datasets=Data sets
-datapartners.licence=Licence
-datapartners.records=Records
+# Page of bhl
+bhl.title.bhl=Biodiversity Heritage Library
+bhl.title.trove=Trove
+bhl.reference.found.bhl=Name references found in the
+bhl.reference.found.trove=Name references found in
+bhl.search=BHL Search
+bhl.search.bhl=Biodiversity Heritage Library
+bhl.search.wait=Searching, please wait...
 
-overview.conservationstatus=Conservation Status
-overview.onlineresources=Online Resources
+# Page of data partners
+data.partners.data.sets=Data sets
+data.partners.data.licenca=Licence
+data.partners.data.records=Records
 
-search.searchfor=Search for 
-search.returned=returned
-search.results=results
+home=Home
 
-search.relatedsearches=Related Searches
-search.resultsperpage=Results per page
-search.sortby=Sort by
-search.sortorder=Sort order
-search.descending=descending
-search.ascending=ascending
+error.url=<a href="{0}/australias-species/">Austria&#39;s species</a>
+error.title=Biodiversity Information Explorer (BIE)
+error.main.title=An error has occurrence | BIE
 
-search.bestmatch=best match
-search.scientificname=scientific name
-search.commonname=common name
-search.taxonrank=taxon rank
+page.not.found.title=Page Not Found
+page.error.page.not.found.desc=Error: Page Not Found (404)
 
-search.viewimages01=View images of species within this
-search.viewimages02=
+label.recordSighting.descr=Below you find optional plattforms where you can report your sightings
 
-search.more=More
-search.less=Less
+sequences.gendb=Genbank
 
-search.occurrencere.records=Occurrence records
-
-imagesearch.imagesof=Images of
-imagesearch.species=species
-imagesearch.from=from
-
-imagesearch.imagesfor=Images for
-imagesearch.speciesimages=Species images
-
-search.searchresults=Search results
-search.search=Search
-search.refineresults=Refine results
-
-search.commonNameLanguage=English name
-search.occurrences=Occurrences:
-
-search.everything=all records
-
-search.download=downloads
-search.downloadalist=Download a list of taxa for your search
-
-eol.description.photographer=Photographer
-eol.description.rightsholder=Rights holder
-eol.description.supplyedby=Supplied by
-
-eol.description.type=Type
-eol.description.by=By
-eol.description=Date
+gallery.noimages=No images available for this taxon
+gallery.noimages.descr01=If you have images for this taxon that you would like to share with
+gallery.noimages.descr02=please upload using the upload tools.
