--- a/grails-app/i18n/messages_de_AT.properties
+++ b/grails-app/i18n/messages_de_AT.properties
@@ -1,7 +1,6 @@
 site.title=Biodiversit\u00E4ts-Atlas \u00D6sterreich
 
-index.title=Im Atlas suchen
-
+label.overview=Übersicht
 label.acceptedName=Akzeptierter Name
 label.acceptedName.detail=Der Name, der derzeit f\u00FCr dieses Taxon verwendet wird
 label.classification=Klassifikation
@@ -10,18 +9,18 @@ label.commonName=Allgemeiner Name
 label.commonName.detail=Trivialname (nicht-wissenschaftlicher Name) f\u00FCr dieses Taxon. Diese Namen sind nicht zwangsl\u00E4ufig eindeutig und mehrere Taxa haben m\u00F6glicherweise denselben Namen.
 label.countryCode.vernacular=Land
 label.countryCode.vernacular.detail=Dieser Name wird in einem bestimmten Land verwendet
-label.data-partners=Datenpartner_innen
+label.data-partners=Datenpartner
 label.gallery=Galerie
-label.identifier=Identifier
+label.identifier=Bezeichner
 label.identifier.detail=Codes die von verschiedenen Quellen f\u00FCr die Identifizierung von Taxon und Taxonname verwendet wird. Einige Bezeichner sind historisch.
 label.in=in
 label.indigenous-info=Indigene Information
 label.isPlural.vernacular=Plural
-label.isPlural.vernacular.detail=Bei diesem Namen handelt es sich um die Pluralform
-label.lifeStage.vernacular=Entwicklungsstadium
-label.lifeStage.vernacular.detail=Dieser Name wird f\u00FCr ein bestimmtes Entwicklungsstadium verwendet
+label.isPlural.vernacular.detail=Dieser Name ist die Pluralform
+label.lifeStage.vernacular=Lebensstadium
+label.lifeStage.vernacular.detail=Dieser Name wird f\u00FCr ein bestimmtes Lebensstadium verwendet
 label.literature=Literatur
-label.locality.vernacular=Gebiet
+label.locality.vernacular=Standort
 label.locality.vernacular.detail=Dieser Name wird in einer bestimmten geografischen Region oder einem bestimmten Gebiet verwendet
 label.nameAccordingTo=Nach\:
 label.namePublishedIn=Ver\u00F6ffentlicht in\:
@@ -29,14 +28,12 @@ label.name=Name
 label.name.detail=Varianten dieses Namens aus verschiedenen Quellen
 label.names=Namen
 label.organismPart.vernacular.detail=Dieser Name wird f\u00FCr einen bestimmten Teil des Lebewesens verwendet
-label.overview=\u00DCbersicht
-label.records=Daten
+label.records=Dateneintr\u00E4ge
 label.recordSighting=Eine Beobachtung melden
-label.recordSighting.descr=Nachstehend finden Sie eine Auswahl an Meldeplattformen bei denen Sie Ihre Beobachtung(en) melden können
-label.no.records.found=Keine Daten gefunden
+label.no.records.found=Keine Eintr\u00E4ge gefunden
 label.referencedIn=Verweis in\:
 label.search=Suchen
-label.searchAtlas=Suchen Sie Arten, Datensets, Datenpartner_innen und mehr ...
+label.searchAtlas=Suchen Sie Arten, Datens\u00E4tze und mehr ...
 label.searchSpecies=Arten suchen
 label.sequences=Sequenzen
 label.sex.vernacular=Geschlecht
@@ -52,8 +49,8 @@ label.temporal.vernacular.detail=Dieser Name wird w\u00E4hrend einer bestimmten 
 facet.TAXON=Arten
 facet.INSTITUTION=Institutionen
 facet.COLLECTION=Sammlungen
-facet.DATAPROVIDER=Datenpartner_innen
-facet.DATASET=Datensammlungen
+facet.DATAPROVIDER=Datenprovider
+facet.DATASET=Datens\u00E4tze
 facet.DATARESOURCE=Datens\u00E4tze
 facet.LAYER=Spatial Layer
 facet.REGION=Regionen
@@ -63,17 +60,17 @@ facet.TAXONVARIANT=Quellangaben Arten
 facet.Rank=Taxonomische Rangstufe
 facet.rank=Taxonomische Rangstufe
 facet.pestStatus=Status als Sch\u00E4dling
-facet.conservationStatus=Gef\u00E4hrdungsstatus
+facet.conservationStatus=Schutzstatus
 facet.PublicationType=Publikationsform
-facet.kingdom=Reich
-facet.idxtype=Typ
-facet.australian_s=Kommt in \u00D6sterreich vor
+facet.kingdom=K\u00F6nigreich
+facet.idxtype=Abteilung
+facet.australian_s=Kommt in Österreich vor
 facet.categories=Kategorie
 facet.speciesSubgroup=Artengruppe
-facet.isLocatedInHubCountry_b=Kommt in \u00D6sterreich vor
-facet.locatedInHubCountry=Kommt in \u00D6sterreich vor
+facet.isLocatedInHubCountry_b=Kommt in Österreich vor
+facet.locatedInHubCountry=Kommt in Österreich vor
 facet.hasImage=Bild verf\u00FCgbar
-facet.authority_s=Quelle
+facet.authority_s=Namesquelle
 facet.dataset=Checkliste
 facet.establishmentMeans_s=Etablierungsstatus
 facet.taxonomicStatus_s=Taxonomischer Status
@@ -82,10 +79,10 @@ facet.speciesGroup=Lebensform
 facet.imageAvailable=Bild verf\u00FCgbar
 facet.taxonomicStatus=Taxonomischer Status
 facet.establishmentMeans=Etablierungsstatus
-facet.datasetName=Datensammlung
-facet.taxonGroup_s=Artengruppe
+facet.datasetName=Datensatz
+facet.taxonGroup_s=Taxon-Gruppe
 
-facet.conservationStatusAUS=Gef\u00E4hrdungsstatus in \u00D6sterreich
+facet.conservationStatusAUS=Schutzstatus in Österreich
 facet.conservationStatusACT=Schutzstatus in ACT
 facet.conservationStatusNSW=Schutzstatus in NSW
 facet.conservationStatusNT=Schutzstatus in NT
@@ -106,12 +103,10 @@ facet.category_WA_m_s=WA-Kategorie
 facet.category_NT_m_s=NT-Kategorie
 
 favourite.favourite=<span class\="glyphicon glyphicon-thumbs-up"></span>
-favourite.favourite.detail=Favouriten
+favourite.favourite.detail=Liebelingsarten
 favourite.iconic=<span class\="glyphicon glyphicon-thumbs-up"></span>
 favourite.iconic.detail=Typische Arten
-favourite.interest=
 favourite.interest.detail=Arten von Interesse
-favourite.preferred=
 favourite.preferred.detail=Bevorzugte Arten
 
 isLocatedInHubCountry_b.true=Ja
@@ -121,25 +116,24 @@ imageAvailable.false=Nein
 imageAvailable.yes=Ja
 imageAvailable.true=Ja
 
-rank.unknown=unbekannt
-rank.kingdom=Reich
+rank.kingdom=K\u00F6nigreich
 rank.phylum=Phylum
 rank.order=Ordnung
 rank.family=Familie
-rank.genus=Gattung
+rank.genus=Genus
 rank.species=Art
 rank.subspecies=Unterart
 rank.variety=Variet\u00E4t
 rank.(rank\ not\ specified)=(Rang nicht angegeben)
 rank.subgenus=Untergattung
 rank.cultivar=Cultivar
-rank.section=Sektion
+rank.section=Abschnitt
 rank.subfamily=Unterfamilie
 rank.tribe=Tribus
 rank.series=Serie
-rank.superfamily=\u00DCberfamilie
+rank.superfamily=Überfamilie
 rank.subtribe=Untertribus
-rank.subsection=Untersektion
+rank.subsection=Unterabschnitt
 rank.suborder=Unterordnung
 rank.subseries=Unterserie
 rank.subvariety=Untervariet\u00E4t
@@ -159,7 +153,7 @@ rank.subphylum/subdivision=Unterstamm/Unterabteilung
 rank.infraclass=Infraklasse
 rank.null=(nicht angegeben)
 rank.superclass=Superklasse
-rank.form=Form
+rank.form=Formular
 rank.Incertae\ Sedis\ (uncertain\ rank)=Incertae Sedis (unsicherer Rang)
 rank.Species\ Inquirenda\ (doubtful\ identity)=Species Inquirenda (zweifelhafte Identit\u00E4t)
 rank.cohort=Kohorte
@@ -168,12 +162,12 @@ rank.division=Abteilung
 idxtype.TAXON=Art
 idxtype.INSTITUTION=Institution
 idxtype.COLLECTION=Sammlung
-idxtype.DATAPROVIDER=Datenpartner_in
-idxtype.DATASET=Datensammlung
-idxtype.DATARESOURCE=Datensatz
+idxtype.DATAPROVIDER=Datenprovider
+idxtype.DATASET=Datensatz
+idxtype.DATARESOURCE=Datenbestand
 idxtype.KNOWLEDGEBASE=Hilfeseite
 idxtype.REGION=Region
-idxtype.LOCALITY=Gebiet
+idxtype.LOCALITY=Standort
 idxtype.WORDPRESS=Website
 idxtype.LAYER=Spatial Layer
 idxtype.COMMON=Allgemeiner Name
@@ -194,7 +188,7 @@ region.Tasmania=TAS
 region.IUCN=IUCN
 region.=IUCN
 
-conservationStatusAUS=Gef\u00E4hrdungsstatus in \u00D6sterreich
+conservationStatusAUS=Schutzstatus in Österreich
 conservationStatusACT=Schutzstatus in ACT
 conservationStatusNSW=Schutzstatus in NSW
 conservationStatusNT=Schutzstatus in NT
@@ -206,65 +200,63 @@ conservationStatusWA=Schutzstatus in WA
 scientificNameRaw=Wissenschaftlicher Name
 nameComplete=Wissenschaftlicher Name
 commonNameSingle=Allgemeiner Name
-rank=Taxonomischer Rang
-kingdom=Reich
+rank=Taxon Rang
+kingdom=K\u00F6nigreich
 phylum=Phylum
 class=Klasse
 bioOrder=Ordnung
 family=Familie
-genus=Gattung
+genus=Genus
 imageUrl=Bild
 pestStatus=Status als Sch\u00E4dling
 author=Autor
 acceptedConceptName=Wissenschaftlicher Name f\u00FCr g\u00FCltiges Konzept
 
 images.heading.type=Typen
-images.heading.specimen=Objekte
+images.heading.specimen=Spezimene
 images.heading.other=Bilder
 images.heading.uncertain=Fehlbestimmt
 
-overview.map.occurrence.map=Karte mit Funddaten
-overview.map.occurrence.records=Daten
-overview.map.alert=Bei neuen Funddaten benachrichtigt werden
+overview.map.button.records.list=Beobachtungen anzeigen
+overview.map.button.records.simplemap=Einfache Karte anzeigen
+overview.map.button.records.map=Im Spatial Portal anzeigen
+
+overview.map.button.records.list.title=Eine Liste der Beobachtungen f\u00FCr dieses Taxon anzeigen
+overview.map.button.records.simplemap.title=Eine einfache Karte der Beobachtungen f\u00FCr dieses Taxon anzeigen
+overview.map.button.records.map.title=Daten f\u00FCr dieses Taxon mithilfe von erweiterten Kartenwerkzeugen analysieren
+
+overview.map.occurrence.records.01=Karte mit Funddaten
+
+overview.datasets.have.provided.data=<span class="datasetLabel">datasets have</span> provided data to the {0} for this {1}.
+overview.datasets.lists.01=Browse the list of datasets
+overview.datasets.lists.02=and find organisations you can join if you are interested in participating in a survey for
+overview.datasets.species.of=Atren von
+overview.datasets.species.like=Arten wie
+
+overview.datasets.descr.survey01=Durchsuchen sie die Liste von Datensammlungen
+overview.datasets.descr.survey02=und erfahren sie mehr \u00FCber die Datenpartner_innen, die diese zur Verf\u00FCgung gestellt haben
 
 overview.datasets.title=Datensets
 
 overview.datasets.descr01a=Datensammlungen
 overview.datasets.descr01b=Datensammlung
-overview.datasets.descr01c=zur Verfügung gestellt für den
-overview.datasets.descr01d=für
+overview.datasets.descr01c=zur Verf\u00FCgung gestellt f\u00FCr den
+overview.datasets.descr01d=f\u00FCr
 overview.datasets.descr02=f\u00FCr diese
 overview.datasets.descr03=stammen aus
 overview.datasets.descr04=Die Daten im
 
-overview.datasets.descr.survey01=Durchsuchen sie die Liste von Datensammlungen
-overview.datasets.descr.survey02=und erfahren sie mehr \u00FCber die Datenpartner_innen, die diese zur Verf\u00FCgung gestellt haben
+overview.online.resources=Onlineressourcen
 
-gallery.noimages=F\u00FCr dieses Taxon sind keine Bilder verf\u00FCgbar
-gallery.noimages.descr01=Wenn Sie Bilder f\u00FCr dieses Taxon haben und diese mit dem Biodiversit\u00E4ts-Atlas \u00D6sterreich
-gallery.noimages.descr02=teilen m\u00F6chten, laden Sie diese mittels des Upload-Tools in den Atlas.
 
-overview.map.button.records.list=Funddaten anzeigen
-overview.map.button.records.simplemap=Einfache Karte anzeigen
-overview.map.button.records.map=Im Spatial Portal anzeigen
-
-overview.map.button.records.list.title=Liste der Funddaten f\u00FCr dieses Taxon anzeigen
-overview.map.button.records.simplemap.title=Eine einfache Karte der Beobachtungen f\u00FCr dieses Taxon anzeigen
-overview.map.button.records.map.title=Funddaten des Taxons mithilfe von erweiterten Analysewerkzeugen im Spatial Portal analysieren
-
-show.json=JSON
-show.rdf=RDF
-show.view.json.title=JSON-Dokument anzeigen (Datenaustausch-Format)
-show.australian.species=\u00D6sterreichische Arten
-
-commonStatus.common=allgemein
+commonStatus.common=gemein
 commonStatus.common.detail=Ein \u00FCblicher allgemeiner Name f\u00FCr diese Art
 commonStatus.legislated=gesetzlich
-commonStatus.legislated.detail=Artname der in der Gesetzgebung verwendet wird
-commonStatus.local=regional
-commonStatus.local.detail=Ein regional verwendeter Name f\u00FCr diese Art
+commonStatus.legislated.detail=Ein Name, der in der Gesetzgebung als Bezeichnung f\u00FCr die Art erscheint
+commonStatus.local=lokal
+commonStatus.local.detail=Ein lokal verwendeter Name f\u00FCr diese Art
 commonStatus.preferred=bevorzugt
-commonStatus.preferred.detail=Der bevorzugte allgemeine Name f\u00FCr diese Art
+commonStatus.preferred.detail=Der bevorzugte umgangssprachliche Name f\u00FCr diese Art
 commonStatus.standard=standard
 commonStatus.standard.detail=Name der in offiziellen Dokumenten f\u00FCr diese Art verwendet wird
 commonStatus.traditionalKnowledge=traditionelles Wissen
@@ -272,7 +264,7 @@ commonStatus.traditionalKnowledge.detail=Traditionell verwendeter Name
 
 
 identifierFormat.lsid=lsid
-identifierFormat.lsid.detail=Ein Bezeichner im Life Sciences Identifier-Format (LSID)
+identifierFormat.lsid.detail=Ein Bezeichner im Life Sciences Indentifier-Format (LSID)
 identifierFormat.url=url
 identifierFormat.url.detail=Ein Bezeichner, der eine aufl\u00F6sbare URL ist
 
@@ -295,7 +287,7 @@ identifierType.taxonConcept=Taxonomisches Konzept
 identifierType.taxonConcept.detail=Bezeichner f\u00FCr die Taxondefinition und die Verwandtschaftsbeziehungen zu anderen Taxa
 identifierType.vernacular=Allgemeiner Name
 identifierType.vernacular.detail=Bezeichner f\u00FCr den allgemeinen (volkst\u00FCmlichen) Namen eines Taxon
-        
+
 taxonomicStatus.accepted=Akzeptiert
 taxonomicStatus.accepted.annotation=g\u00FCltig
 taxonomicStatus.accepted.detail=Der Status eines Taxons gem\u00E4ß eines taxonomischen Regelwerks
@@ -307,7 +299,7 @@ taxonomicStatus.doubtful.format=<span class\="doubtful-name">{0}</span>
 taxonomicStatus.excluded=Ausgeschlossen
 taxonomicStatus.excluded.annotation=ausgeschlossen
 taxonomicStatus.excluded.detail=Ein Name, der in einer Region nicht vorkommt
-taxonomicStatus.excluded.format=<span class\="excluded-name">{0}&nbsp;- ausgeschlossener&nbsp;Name</span>
+taxonomicStatus.excluded.format=<span class\="excluded-name">{0}&nbsp;- entfernter&nbsp;Name</span>
 taxonomicStatus.homotypicsynonym=Homotypisches Synonym
 taxonomicStatus.homotypicSynonym=Homotypisches Synonym
 taxonomicStatus.homotypicSynonym.annotation=homotypisch
@@ -381,9 +373,9 @@ taxonomicStatus.synonym.detail=Ein Name, der ein Synonym f\u00FCr den akzeptiert
 taxonomicStatus.synonym.format=<span class\="synonym-name">{0} <span class\="accepted-name">(g\u00FCltiger&nbsp;Name\:&nbsp;{1})</span></span>
 taxonomicStatus.unplaced=Unbestimmt
 taxonomicStatus.unplaced.annotation=unbestimmt
-taxonomicStatus.unplaced.detail=Ein wissenschaftlicher Name der keiner Systematik zugeordnet ist
+taxonomicStatus.unplaced.detail=Ein wissenschaftlicher Name der keiner Systematik zugeteilt ist
 taxonomicStatus.unplaced.format=<span class\="unplaced-name">{0}</span>
-no.records.found=Keine Funddaten gefunden
+no.records.found=Keine Beobachtungsdaten gefunden
 
 page.bhl.none=Keine Ergebnisse f\u00FCr {0} gefunden
 page.bhl.showing=Zeige {0} bis {1} von {2} bis {3} Eintr\u00E4gen
@@ -395,8 +387,7 @@ page.index.title=Suchen | {0}
 page.species.index.heading={0} nach Arten durchsuchen
 page.species.index.title=Artensuche | {0}
 
-names.title=Namen und Quellen
-names.source=Quelle
+label.recordSighting.descr=Nachstehend finden Sie eine Auswahl an Meldeplattformen bei denen Sie Ihre Beobachtung(en) melden k\u00F6nnen
 
 classification.download.childtaxa01=Child Taxa herunterladen
 classification.download.childtaxa02=herunterladen
@@ -425,8 +416,42 @@ datapartners.datasets=Datensets
 datapartners.licence=Lizenz
 datapartners.records=Funddaten
 
-overview.conservationstatus=Gef\u00E4hrdungsstatus
-overview.onlineresources=Onlineressourcen
+sequences.gendb=Gendatenbank
+
+# Page of images
+images.search.title=Bildbrowser
+images.specie=Arten
+images.for=Bilder f\u00FCr
+images.of=Bilder von
+images.from=von
+images.species=Bilder von Arten 
+images.load.more=Mehr Bilder laden
+images.more.information.on.this.0=Mehr Information {0}
+
+# Page of show
+show.json=JSON
+show.rdf=RDF
+show.view.json.title=JSON-Dokument anzeigen (Datenaustausch-Format)
+show.australian.species=\u00D6sterreichische Arten
+show.name.authority=Name
+show.source=Quelle
+show.rights.holder=Rechteinhaber
+show.provided.by=Zur Verf\u00FCgung gestellt von
+show.main.image=Hauptbild
+show.main.audio=Hauptaudio
+show.name=Name
+show.attribution=Namensnennung
+show.licence=Lizenz
+show.main.video=Hauptvideo
+show.ok=OK
+
+gallery.noimages=Für dieses Taxon sind keine Bilder verfügbar
+gallery.noimages.descr01=Wenn Sie Bilder für dieses Taxon haben und diese mit dem Biodiversitäts-Atlas Österreich
+gallery.noimages.descr02=teilen möchten, laden Sie diese mittels des Upload-Tools in den Atlas.
+
+# Page of names
+names.title=Namen und Quellen
+names.accepted.source=Quelle
 
 search.searchfor=Die Suche nach
 search.returned=ergab
@@ -439,7 +464,7 @@ search.sortorder=Ordnen nach
 search.descending=Absteigend
 search.ascending=Aufsteigend
 
-search.bestmatch=Beste \u00DCbereinstimmung
+search.bestmatch=Beste Übereinstimmung
 search.scientificname=Wissenschaftlicher Name
 search.commonname=Allgemeiner Name
 search.taxonrank=Taxonomischer Rang
@@ -450,30 +475,27 @@ search.viewimages02=ansehen
 search.more=Mehr
 search.less=Weniger
 
-search.occurrence.records=Funddaten
-
-imagesearch.imagesof=Bilder von
-imagesearch.species=Arten
-imagesearch.from=von
-
-imagesearch.imagesfor=Bilder f\u00FCr
-imagesearch.speciesimages=Bilder von Arten
-
-search.searchresults=Suchergebnisse
-search.search=Suchen
-search.refineresults=Ergebnisse filtern
-
-search.commonName.Language=Deutscher Name
-search.occurrences=Funddaten:
-
-search.everything=allen Daten
-
-search.download=Download
-search.downloadalist=Taxonomieliste aus ihrer Suche herunterladen
-eol.description.photographer=Fotograf
-eol.description.rightsholder=Rechtsinhaber
-eol.description.supplyedby=Zur Verf\u00FCgung gestellt von
-
-eol.description.type=Typ
-eol.description.by=von
-eol.description=Datum
+# Page search specie profile
+search.title.search=Suche
+search.autocomplete.placeholder=Suche nach Arten, Datensets, und mehr...
+search.title.main-btn=Suche
+search.for.title=Die Suche nach <strong>{0}</strong> gab {1} Ergebnis.
+search.resultFine=Ergebnisse verfeinern
+search.for=Suche nach
+search.related=Verwandte Suche
+search.download=Herunterladen
+search.results.page=Ergebnisse pro Seite
+search.sort.by=Sortieren nach
+search.sort.taxon=Taxonomische Reihenfolge
+search.sort.common=Deutscher Name
+search.sort.scientific=Wissenschaftlicher Name
+search.sort.match=beste Übereinstimmung
+search.sort.order=Sortierreihenfolge
+search.sort.order.ascending=Aufsteigend
+search.sort.order.desceding=Absteigend
+search.sort.address=Adresse
+search.details.occurrence=Vorkommnisse:
+search.details.view.image=Zeige Bilder von {0}
+search.all.records=Alle Ergebnisse
+search.remove.filter=Filer entfernen
+search.download.taxa.for.your.search=Laden sie eine taxonomische Liste für ihre Suche herunter
